--- a/petshop-frontend/app/src/styles/menu.less
+++ b/petshop-frontend/app/src/styles/menu.less
@@ -2,18 +2,18 @@
 
 .menu {
   display: flex;
+  width: 150px;
   margin-bottom: 5px;
-  height: 50px;
-  flex-direction: row;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
   color: @menu-color;
   vertical-align: middle;
 
-  .pets-tab, .add-pet-tab {
+  .tab {
     box-sizing: border-box;
     cursor: pointer;
     margin: 0 5px;
-    width: 120px;
+    width: 100%;
     line-height: 50px;
     &:hover {
       border: 1px solid grey;
