--- a/petshop-frontend/app/src/styles/constant.less
+++ b/petshop-frontend/app/src/styles/constant.less
@@ -1,6 +1,16 @@
 @import "~normalize.css";
 
-@menu-color: #80686b;
+// all
+@globalTextColor: #1B1610;
 
-@content-background-color: grey;
-@content-color: white;
+// header
+@header-backcolor: #552D00;
+
+// menu
+@menu-backcolor: #D4A26A;
+
+// content
+@content-backcolor: #AA7539;
+
+// footer
+@footer-backcolor: #552D00;
