--- a/petshop-frontend/app/src/styles/header.less
+++ b/petshop-frontend/app/src/styles/header.less
@@ -1,10 +1,21 @@
 @import "constant";
 
 header {
+  background: @header-backcolor;
+  padding: 0 25%;
+  display: flex;
+  align-items: center;
 
   .logo {
     img {
-
+      margin: 10px;
+      width: 100px;
+      height: 100px;
     }
+  }
+
+  h1 {
+    font-size: 50px;
+    padding: 0 0 0 100px;
   }
 }
